--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,58 @@
-<app-header></app-header>
-<app-sidebar>ng serve</app-sidebar>
-<app-footer></app-footer>
+<ng-template [ngIf]="isAuthenticated">
+    <div class="page-wrapper">
+        <!-- START HEADER-->
+        <header class="header">
+            <div class="page-brand">
+                <a class="link" href="index.html">
+                    <span class="brand">Admin
+                        <span class="brand-tip">CAST</span>
+                    </span>
+                    <span class="brand-mini">AC</span>
+                </a>
+            </div>
+        </header>
+        <!-- END HEADER-->
+    </div>
+
+    <!-- BEGIN PAGA BACKDROPS-->
+    <div class="sidenav-backdrop backdrop"></div>
+    <div class="preloader-backdrop">
+        <div class="page-preloader">Loading</div>
+    </div>
+    <!-- END PAGA BACKDROPS-->
+    <!-- CORE PLUGINS-->
+    <script src="./assets/vendors/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/vendors/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
+    <script src="./assets/vendors/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./assets/vendors/metisMenu/dist/metisMenu.min.js" type="text/javascript"></script>
+    <script src="./assets/vendors/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+    <!-- PAGE LEVEL PLUGINS-->
+    <script src="./assets/vendors/chart.js/dist/Chart.min.js" type="text/javascript"></script>
+    <script src="./assets/vendors/jvectormap/jquery-jvectormap-2.0.3.min.js" type="text/javascript"></script>
+    <script src="./assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
+    <script src="./assets/vendors/jvectormap/jquery-jvectormap-us-aea-en.js" type="text/javascript"></script>
+    <!-- CORE SCRIPTS-->
+    <script src="assets/js/app.min.js" type="text/javascript"></script>
+    <!-- PAGE LEVEL SCRIPTS-->
+    <script src="./assets/js/scripts/dashboard_1_demo.js" type="text/javascript"></script>
+
+    
+    <app-header></app-header>
+    <app-sidebar></app-sidebar>
+</ng-template>
+<ng-template *ngIf="isAuthenticated; then adminBlock else clientBlock" >
+
+</ng-template>
+
+<ng-template #adminBlock>
+    <div class="content-wrapper">
+        <div class="page-content fade-in-up">
+            <router-outlet></router-outlet>
+            <app-footer></app-footer>
+        </div>
+    </div>
+</ng-template>
+<ng-template #clientBlock>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</ng-template>
