--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,7 +10,15 @@
   
         <form action="../../index.html" method="post">
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Full name">
+            <input type="text" class="form-control" placeholder="First name">
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <span class="fas fa-user"></span>
+              </div>
+            </div>
+          </div>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Last name">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-user"></span>
